# sophus

./: CMakeLists.txt  Makefile  README.rst  manifest.xml  package.xml
sophus/: so3.cpp  so3.h
src/: scso3.cpp  se2.cpp  se3.cpp  sim3.cpp  so2.cpp  so3.cpp  test_scso3.cpp  test_se2.cpp  test_se3.cpp  test_sim3.cpp  test_so3.cpp
